CloudFormation/Challenge2/challenge2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Gytis / Challenge 2 IaC

Parameters:

    EnvironmentName:
        Description: Environment Name
        Type: String

    VpcCIDR:
        Description: VPC CIDR
        Type: String
        Default: 10.0.0.0/16

    PublicSubnetCIDR:
        Description: Public Subnet CIDR
        Type: String
        Default: 10.0.1.0/24

    PrivateSubnetCIDR:
        Description: Private Subnet CIDR
        Type: String
        Default: 10.0.2.0/24

Resources:

    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref InternetGateway
            VpcId: !Ref VPC

    PublicSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref PublicSubnetCIDR
            MapPublicIpOnLaunch: true
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Subnet

    PrivateSubnet:
        Type: AWS::EC2::Subnet
        Properties:
            CidrBlock: !Ref PrivateSubnetCIDR
            MapPublicIpOnLaunch: false
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Subnet

    NatGateway:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt ElasticIP.AllocationId
            SubnetId:
                Ref: PublicSubnet
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName

    ElasticIP:
        DependsOn: InternetGatewayAttachment
        Type: AWS::EC2::EIP
        Properties:
            Domain: vpc

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId: !Ref VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Public Route Table

    AssociatePublicRT:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet

    PrivateRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value: !Sub ${EnvironmentName} Private Route Table
    
    AssociatePrivateRT:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            SubnetId: !Ref PrivateSubnet

    PublicRoute:
        DependsOn: InternetGateway
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

    PrivateRoute:
        DependsOn: NatGateway
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref PrivateRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway
